// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHakukohdeByFormValues does not return translations for non-selected language 1`] = `
Object {
  "esikatselu": false,
  "externalId": "ext1",
  "hakuajat": Array [
    Object {
      "alkaa": "2019-04-17T05:52",
      "paattyy": "2019-04-22T05:52",
    },
    Object {
      "alkaa": "2019-05-17T05:52",
      "paattyy": "2019-05-18T05:52",
    },
  ],
  "hakukohdeKoodiUri": null,
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": Object {},
  "hakulomakeLinkki": Object {},
  "hakulomaketyyppi": "ataru",
  "jarjestyspaikkaOid": "2.2.2.2.2",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "liitteet": Array [
    Object {
      "kuvaus": Object {
        "fi": "<p>Fi kuvaus</p>",
        "sv": "<p>Sv kuvaus</p>",
      },
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "toimitusaika": "2019-08-17T05:52",
      "toimitusosoite": Object {
        "osoite": Object {
          "osoite": Object {
            "fi": "Fi osoite",
            "sv": "Sv osoite",
          },
          "postinumeroKoodiUri": "posti_1#1",
        },
        "sahkoposti": Object {
          "fi": "Fi sahkoposti",
          "sv": "Sv sahkoposti",
        },
        "verkkosivu": "https://liitelomake.fi",
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyyppi_1#1",
    },
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": Object {
    "aloituspaikat": Object {
      "ensikertalaisille": 29,
      "kuvaus": Object {
        "en": "<p>aloituspaikan kuvaus en</p>",
        "fi": "<p>aloituspaikan kuvaus fi</p>",
        "sv": "<p>aloituspaikan kuvaus sv</p>",
      },
      "lukumaara": 45,
    },
    "hakukohteenLinja": Object {
      "alinHyvaksyttyKeskiarvo": 6.5,
      "linja": "lukiopainotukset_0104#1",
      "lisatietoa": Object {
        "fi": "<p>Fi lisatietoa</p>",
        "sv": "<p>Sv lisatietoa</p>",
      },
      "painotetutArvosanat": Array [
        Object {
          "koodiUrit": Object {
            "oppiaine": "painotettavatoppiaineetlukiossa_a1en#1",
          },
          "painokerroin": 1.2,
        },
      ],
    },
    "jarjestaaUrheilijanAmmKoulutusta": false,
    "kaytetaanHaunAlkamiskautta": false,
    "koulutuksenAlkamiskausi": Object {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": Object {},
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": null,
    },
    "kynnysehto": Object {
      "fi": "<p>Hakukohteen kynnysehto - fi</p>",
      "sv": "<p>Hakukohteen kynnysehto - sv</p>",
    },
    "uudenOpiskelijanUrl": Object {
      "fi": "https://opiskelu.fi",
      "sv": "https://opiskelu.se",
    },
    "valintakokeidenYleiskuvaus": Object {
      "fi": "<p>Yleiskuvaus - fi</p>",
      "sv": "<p>Yleiskuvaus - sv</p>",
    },
    "valintaperusteenValintakokeidenLisatilaisuudet": Array [
      Object {
        "id": "123-123",
        "tilaisuudet": Array [
          Object {
            "aika": Object {
              "alkaa": "2019-04-16T08:44",
              "paattyy": "2019-04-18T08:44",
            },
            "jarjestamispaikka": Object {
              "fi": "jarjestamispaikka - fi",
              "sv": "jarjestamispaikka - sv",
            },
            "lisatietoja": Object {
              "fi": "<p>fi lisatietoja</p>",
              "sv": "<p>sv lisatietoja</p>",
            },
            "osoite": Object {
              "osoite": Object {
                "fi": "fi osoite",
                "sv": "sv osoite",
              },
              "postinumeroKoodiUri": "posti_1#1",
            },
          },
        ],
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "pohjakoulutusvaatimusKoodiUrit": Array [
    "vaatimus_1#1",
    "vaatimus_2#1",
  ],
  "pohjakoulutusvaatimusTarkenne": Object {
    "fi": "<p><strong>Tarkenne fi</strong></p>",
    "sv": "<p><strong>Tarkenne sv</strong></p>",
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "valintakokeet": Array [
    Object {
      "id": undefined,
      "metadata": Object {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": Object {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>",
          "sv": "<p>ohjeet ennakkovalmistautumiseen - sv</p>",
        },
        "ohjeetErityisjarjestelyihin": Object {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>",
          "sv": "<p>Ohjeet erityisjärjestelyihin - sv</p>",
        },
        "tietoja": Object {
          "fi": "<p>Tietoa hakijalle - fi</p>",
          "sv": "<p>Tietoa hakijalle - sv</p>",
        },
        "vahimmaispisteet": 30.4,
      },
      "nimi": Object {
        "fi": "nimi - fi",
        "sv": "nimi - sv",
      },
      "tilaisuudet": Array [
        Object {
          "aika": Object {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "jarjestamispaikka": Object {
            "fi": "jarjestamispaikka - fi",
            "sv": "jarjestamispaikka - sv",
          },
          "lisatietoja": Object {
            "fi": "<p>fi lisatietoja</p>",
            "sv": "<p>sv lisatietoja</p>",
          },
          "osoite": Object {
            "osoite": Object {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumeroKoodiUri": "posti_1#1",
          },
        },
      ],
      "tyyppiKoodiUri": "tyyppi_1#1",
    },
  ],
  "valintaperusteId": "peruste_1#1",
}
`;

exports[`getHakukohdeByFormValues returns correct hakukohde given form values 1`] = `
Object {
  "esikatselu": false,
  "externalId": "ext1",
  "hakuajat": Array [
    Object {
      "alkaa": "2019-04-17T05:52",
      "paattyy": "2019-04-22T05:52",
    },
    Object {
      "alkaa": "2019-05-17T05:52",
      "paattyy": "2019-05-18T05:52",
    },
  ],
  "hakukohdeKoodiUri": null,
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": Object {},
  "hakulomakeLinkki": Object {},
  "hakulomaketyyppi": "ataru",
  "jarjestyspaikkaOid": "2.2.2.2.2",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "liitteet": Array [
    Object {
      "kuvaus": Object {
        "fi": "<p>Fi kuvaus</p>",
        "sv": "<p>Sv kuvaus</p>",
      },
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "toimitusaika": "2019-08-17T05:52",
      "toimitusosoite": Object {
        "osoite": Object {
          "osoite": Object {
            "fi": "Fi osoite",
            "sv": "Sv osoite",
          },
          "postinumeroKoodiUri": "posti_1#1",
        },
        "sahkoposti": Object {
          "fi": "Fi sahkoposti",
          "sv": "Sv sahkoposti",
        },
        "verkkosivu": "https://liitelomake.fi",
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyyppi_1#1",
    },
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": Object {
    "aloituspaikat": Object {
      "ensikertalaisille": 29,
      "kuvaus": Object {
        "fi": "<p>aloituspaikan kuvaus fi</p>",
        "sv": "<p>aloituspaikan kuvaus sv</p>",
      },
      "lukumaara": 45,
    },
    "hakukohteenLinja": Object {
      "alinHyvaksyttyKeskiarvo": 6.5,
      "linja": "lukiopainotukset_0104#1",
      "lisatietoa": Object {
        "fi": "<p>Fi lisatietoa</p>",
        "sv": "<p>Sv lisatietoa</p>",
      },
      "painotetutArvosanat": Array [
        Object {
          "koodiUrit": Object {
            "oppiaine": "painotettavatoppiaineetlukiossa_a1en#1",
          },
          "painokerroin": 1.2,
        },
      ],
    },
    "jarjestaaUrheilijanAmmKoulutusta": false,
    "kaytetaanHaunAlkamiskautta": false,
    "koulutuksenAlkamiskausi": Object {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": Object {},
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": null,
    },
    "kynnysehto": Object {
      "fi": "<p>Hakukohteen kynnysehto - fi</p>",
      "sv": "<p>Hakukohteen kynnysehto - sv</p>",
    },
    "uudenOpiskelijanUrl": Object {
      "fi": "https://opiskelu.fi",
      "sv": "https://opiskelu.se",
    },
    "valintakokeidenYleiskuvaus": Object {
      "fi": "<p>Yleiskuvaus - fi</p>",
      "sv": "<p>Yleiskuvaus - sv</p>",
    },
    "valintaperusteenValintakokeidenLisatilaisuudet": Array [
      Object {
        "id": "123-123",
        "tilaisuudet": Array [
          Object {
            "aika": Object {
              "alkaa": "2019-04-16T08:44",
              "paattyy": "2019-04-18T08:44",
            },
            "jarjestamispaikka": Object {
              "fi": "jarjestamispaikka - fi",
              "sv": "jarjestamispaikka - sv",
            },
            "lisatietoja": Object {
              "fi": "<p>fi lisatietoja</p>",
              "sv": "<p>sv lisatietoja</p>",
            },
            "osoite": Object {
              "osoite": Object {
                "fi": "fi osoite",
                "sv": "sv osoite",
              },
              "postinumeroKoodiUri": "posti_1#1",
            },
          },
        ],
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "pohjakoulutusvaatimusKoodiUrit": Array [
    "vaatimus_1#1",
    "vaatimus_2#1",
  ],
  "pohjakoulutusvaatimusTarkenne": Object {
    "fi": "<p><strong>Tarkenne fi</strong></p>",
    "sv": "<p><strong>Tarkenne sv</strong></p>",
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "valintakokeet": Array [
    Object {
      "id": undefined,
      "metadata": Object {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": Object {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>",
          "sv": "<p>ohjeet ennakkovalmistautumiseen - sv</p>",
        },
        "ohjeetErityisjarjestelyihin": Object {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>",
          "sv": "<p>Ohjeet erityisjärjestelyihin - sv</p>",
        },
        "tietoja": Object {
          "fi": "<p>Tietoa hakijalle - fi</p>",
          "sv": "<p>Tietoa hakijalle - sv</p>",
        },
        "vahimmaispisteet": 30.4,
      },
      "nimi": Object {
        "fi": "nimi - fi",
        "sv": "nimi - sv",
      },
      "tilaisuudet": Array [
        Object {
          "aika": Object {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "jarjestamispaikka": Object {
            "fi": "jarjestamispaikka - fi",
            "sv": "jarjestamispaikka - sv",
          },
          "lisatietoja": Object {
            "fi": "<p>fi lisatietoja</p>",
            "sv": "<p>sv lisatietoja</p>",
          },
          "osoite": Object {
            "osoite": Object {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumeroKoodiUri": "posti_1#1",
          },
        },
      ],
      "tyyppiKoodiUri": "tyyppi_1#1",
    },
  ],
  "valintaperusteId": "peruste_1#1",
}
`;
